// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bank DTO > decodes the 'default (PythMSOL, emode, rate limite…' bank into the API DTO 1`] = `
{
  "address": "22DcjMZrMwC5Bpa5AGBsmjc5V9VuQrXG6N9ZtdUNyYGE",
  "assetShareValue": "0.97836563362791650889",
  "borrowingPositionCount": "-2260",
  "collectedGroupFeesOutstanding": "27384589205.80781782",
  "collectedInsuranceFeesOutstanding": "6396.8469519199783093",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 0,
    "assetWeightInit": "0.64999997615814208984",
    "assetWeightMaint": "0.80000001192092895508",
    "borrowLimit": "500000000000000",
    "configFlags": 1,
    "depositLimit": "2000000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 536870911,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 42949672,
          "util": 3435973836,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0.010000000000001563194",
      "protocolIrFee": "0.13500000000000156319",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.2999999523162841797",
    "liabilityWeightMaint": "1.2000000476837158203",
    "operationalState": "Operational",
    "oracleKeys": [
      "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
      "8szGkuLTAux9XMgZ2vtY39jVSowEcpBfFfD8hXSEqdGC",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 70,
    "oracleMaxConfidence": 0,
    "oracleSetup": "PythMSOL",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "264336000",
  },
  "driftIntegrationAccounts": undefined,
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [
      {
        "assetWeightInit": "0.89999999999999857891",
        "assetWeightMaint": "0.94999999999999928946",
        "collateralBankEmodeTag": 501,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.85000000000000142109",
        "assetWeightMaint": "0.89999999999999857891",
        "collateralBankEmodeTag": 502,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.87999999999999900524",
        "assetWeightMaint": "0.92999999999999971578",
        "collateralBankEmodeTag": 1571,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.80000000000000071054",
        "assetWeightMaint": "0.85000000000000142109",
        "collateralBankEmodeTag": 1572,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.80000000000000071054",
        "assetWeightMaint": "0.85000000000000142109",
        "collateralBankEmodeTag": 15787,
        "flags": [
          1,
        ],
      },
    ],
    "emodeTag": 1571,
    "flags": [
      1,
    ],
    "timestamp": 1784821735,
  },
  "feeVault": "9K2hsPoNTNeEubNL8o6c5WWbTWkTWk2KPSWnqYNQZJ4F",
  "feeVaultAuthorityBump": 254,
  "feeVaultBump": 255,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "7b9XZs2cUYiV1p7TBMKDnedjKjJPfnRKKy59TYWh1tcZ",
  "insuranceVaultAuthorityBump": 255,
  "insuranceVaultBump": 253,
  "jupLendIntegrationAccounts": undefined,
  "kaminoIntegrationAccounts": undefined,
  "lastUpdate": 1790234251,
  "lendingPositionCount": "-1164",
  "liabilityShareValue": "1.0736343083859054559",
  "liquidityVault": "B6HqNn83a2bLqo4i5ygjLHJgD11ePtQksUyx4MjD55DV",
  "liquidityVaultAuthorityBump": 255,
  "liquidityVaultBump": 255,
  "mint": "mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So",
  "mintDecimals": 9,
  "oracleKey": "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "52776524379",
      "maxOutflow": "18972501843693",
      "prevWindowOutflow": "1053583907",
      "windowDuration": 86400,
      "windowStart": 1790200668,
    },
    "hourly": {
      "curWindowOutflow": "-270602965",
      "maxOutflow": "9486250921846",
      "prevWindowOutflow": "0",
      "windowDuration": 3600,
      "windowStart": 1790234251,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": undefined,
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "35858262622375.523634",
  "totalLiabilityShares": "4359640017159.0779821",
}
`;

exports[`bank DTO > decodes the 'drift' bank into the API DTO 1`] = `
{
  "address": "2D1dc9jo8CNjgVG4qTKpRuGA83zrXv9iuSHV9BWZ7Js9",
  "assetShareValue": "1",
  "borrowingPositionCount": "0",
  "collectedGroupFeesOutstanding": "0",
  "collectedInsuranceFeesOutstanding": "0",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 4,
    "assetWeightInit": "0.64999999999999857891",
    "assetWeightMaint": "0.80000000000000071054",
    "borrowLimit": "0",
    "configFlags": 0,
    "depositLimit": "20000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 1234567,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0.10000000000000142109",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 123456,
          "util": 12345,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0",
      "protocolIrFee": "0",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.5",
    "liabilityWeightMaint": "1.25",
    "operationalState": "ReduceOnly",
    "oracleKeys": [
      "9Br93wF7vgdtw5JZcXyH1TvM9W4vb3dBPBEBg6EKuGC7",
      "B62ErTornx9tSVwcLwGh9RqvfFCen4cfWkArYdRpRy91",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 300,
    "oracleMaxConfidence": 0,
    "oracleSetup": "DriftPythPull",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "3000000",
  },
  "driftIntegrationAccounts": {
    "driftSpotMarket": "B62ErTornx9tSVwcLwGh9RqvfFCen4cfWkArYdRpRy91",
    "driftUser": "2qnzecL2r35LM51S9EZVrPcdvCSqsg8r2QWcJJqyDuH3",
    "driftUserStats": "CuG9VXiEps4tMdZPzm7x4TJDEtCQNRLBFuyk5GmX4BWg",
  },
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [],
    "emodeTag": 0,
    "flags": [],
    "timestamp": 0,
  },
  "feeVault": "2TygsQZVkYtLCELGe5Yz9BDwGnhdpncJLg3p29wHndrh",
  "feeVaultAuthorityBump": 255,
  "feeVaultBump": 255,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "EM4pM9RTMC5rq75qg6aMSbDocYWxLaoRgjHvLYL8dk65",
  "insuranceVaultAuthorityBump": 255,
  "insuranceVaultBump": 255,
  "jupLendIntegrationAccounts": undefined,
  "kaminoIntegrationAccounts": undefined,
  "lastUpdate": 1779228022,
  "lendingPositionCount": "0",
  "liabilityShareValue": "1",
  "liquidityVault": "8donj1sCLjP3MRXCHsguwMeVfimfQjmLphgdnAXvMDa3",
  "liquidityVaultAuthorityBump": 255,
  "liquidityVaultBump": 255,
  "mint": "5oVNBeEEQvYi1cX3ir8Dx5n1P7pdxydbGF2X4TxVusJm",
  "mintDecimals": 9,
  "oracleKey": "9Br93wF7vgdtw5JZcXyH1TvM9W4vb3dBPBEBg6EKuGC7",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "0",
      "maxOutflow": "0",
      "prevWindowOutflow": "0",
      "windowDuration": 0,
      "windowStart": 0,
    },
    "hourly": {
      "curWindowOutflow": "0",
      "maxOutflow": "0",
      "prevWindowOutflow": "0",
      "windowDuration": 0,
      "windowStart": 0,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": undefined,
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "0",
  "totalLiabilityShares": "0",
}
`;

exports[`bank DTO > decodes the 'juplend' bank into the API DTO 1`] = `
{
  "address": "4cSk2pyxFkPdc5Kp5Yk1HYLjTbNoYzwtz2MCKUogjqeg",
  "assetShareValue": "1",
  "borrowingPositionCount": "0",
  "collectedGroupFeesOutstanding": "0",
  "collectedInsuranceFeesOutstanding": "0",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 6,
    "assetWeightInit": "0.75",
    "assetWeightMaint": "0.85000000000000142109",
    "borrowLimit": "0",
    "configFlags": 1,
    "depositLimit": "200000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 1234567,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0.10000000000000142109",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 123456,
          "util": 12345,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0",
      "protocolIrFee": "0",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.5",
    "liabilityWeightMaint": "1.25",
    "operationalState": "Operational",
    "oracleKeys": [
      "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
      "BeAqbxfrcXmzEYT2Ra62oW2MqkuFDHaCtps47Mzg6Zj3",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 70,
    "oracleMaxConfidence": 0,
    "oracleSetup": "JuplendPythPull",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "20000000",
  },
  "driftIntegrationAccounts": undefined,
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [
      {
        "assetWeightInit": "0.94999999999999928946",
        "assetWeightMaint": "0.98999999999999843681",
        "collateralBankEmodeTag": 501,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.89999999999999857891",
        "assetWeightMaint": "0.94999999999999928946",
        "collateralBankEmodeTag": 502,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.85000000000000142109",
        "assetWeightMaint": "0.9200000000000017053",
        "collateralBankEmodeTag": 619,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "1.0459999999999993747",
        "assetWeightMaint": "1.05099999999999838",
        "collateralBankEmodeTag": 1571,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.99200000000000088107",
        "assetWeightMaint": "0.99899999999999877787",
        "collateralBankEmodeTag": 1572,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.85000000000000142109",
        "assetWeightMaint": "0.94999999999999928946",
        "collateralBankEmodeTag": 15787,
        "flags": [
          1,
        ],
      },
    ],
    "emodeTag": 501,
    "flags": [
      1,
    ],
    "timestamp": 1784821732,
  },
  "feeVault": "J2NrMcst9K12ia9pxaBtPckwpt8mcbMwyLCtUX5EBazi",
  "feeVaultAuthorityBump": 255,
  "feeVaultBump": 255,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "FtRUCasAxESuMnrJdKqcaJgQkYerFjHow5VEutrTcBeb",
  "insuranceVaultAuthorityBump": 255,
  "insuranceVaultBump": 255,
  "jupLendIntegrationAccounts": {
    "jupFTokenAta": "C2xHsSpxk74Bz7bb6Qh3kBrVz8oqxhCdAWQu4XY39TFY",
    "jupFTokenVault": "HsjXF5USiSX2QUcDvsKM8GEVPoUH1eVDjxLB9obvYagK",
    "jupLendingState": "BeAqbxfrcXmzEYT2Ra62oW2MqkuFDHaCtps47Mzg6Zj3",
  },
  "kaminoIntegrationAccounts": undefined,
  "lastUpdate": 1789229660,
  "lendingPositionCount": "31",
  "liabilityShareValue": "1",
  "liquidityVault": "6ceA9KqSSBsMSz5cHPpZ2zNFA5G6FVpGfFHEzX3CX3wj",
  "liquidityVaultAuthorityBump": 255,
  "liquidityVaultBump": 254,
  "mint": "So11111111111111111111111111111111111111112",
  "mintDecimals": 9,
  "oracleKey": "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "0",
      "maxOutflow": "0",
      "prevWindowOutflow": "0",
      "windowDuration": 0,
      "windowStart": 0,
    },
    "hourly": {
      "curWindowOutflow": "0",
      "maxOutflow": "0",
      "prevWindowOutflow": "0",
      "windowDuration": 0,
      "windowStart": 0,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": undefined,
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "962471926547",
  "totalLiabilityShares": "0",
}
`;

exports[`bank DTO > decodes the 'kamino' bank into the API DTO 1`] = `
{
  "address": "27Cpv49jQ3hav8zF3qZjp7T78ATdUTZN4m9x389Z8uH4",
  "assetShareValue": "1",
  "borrowingPositionCount": "0",
  "collectedGroupFeesOutstanding": "0",
  "collectedInsuranceFeesOutstanding": "0",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 3,
    "assetWeightInit": "1",
    "assetWeightMaint": "1",
    "borrowLimit": "0",
    "configFlags": 1,
    "depositLimit": "100000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 1288490188,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0.10000000000000142109",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 171798691,
          "util": 1717986917,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0.010000000000001563194",
      "protocolIrFee": "0",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.5",
    "liabilityWeightMaint": "1.25",
    "operationalState": "Operational",
    "oracleKeys": [
      "6HAuqASbHEh4w4REJEUUUCginTLfj1kwCh215ZLtMkrT",
      "D6q6wuQSrifJKZYpR1M8R4YawnLDtDsMmWM1NbBmgJ59",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 300,
    "oracleMaxConfidence": 0,
    "oracleSetup": "KaminoPythPush",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "100000000",
  },
  "driftIntegrationAccounts": undefined,
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [
      {
        "assetWeightInit": "0.94000000000000127898",
        "assetWeightMaint": "0.98999999999999843681",
        "collateralBankEmodeTag": 619,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.87000000000000099476",
        "assetWeightMaint": "0.9200000000000017053",
        "collateralBankEmodeTag": 871,
        "flags": [
          1,
        ],
      },
    ],
    "emodeTag": 57481,
    "flags": [
      1,
    ],
    "timestamp": 1784821772,
  },
  "feeVault": "GFwMfE7ZrKi7BB1suZbNPpRWKQqeYZG7kUz5tcQ9FENd",
  "feeVaultAuthorityBump": 254,
  "feeVaultBump": 254,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "HZ3Z4ytGATLLWba4g1qHcswERC1uSSr1PNdzHUA3BsqR",
  "insuranceVaultAuthorityBump": 254,
  "insuranceVaultBump": 255,
  "jupLendIntegrationAccounts": undefined,
  "kaminoIntegrationAccounts": {
    "kaminoObligation": "CQNMXyiAmWiANZp4tTpACEnN5z4xmNDaYzirSFLX2hcY",
    "kaminoReserve": "D6q6wuQSrifJKZYpR1M8R4YawnLDtDsMmWM1NbBmgJ59",
  },
  "lastUpdate": 1789229660,
  "lendingPositionCount": "53",
  "liabilityShareValue": "1",
  "liquidityVault": "ESVxo7J4gPiWaoRr5DJmQJQHAbCexerfaxvAQ8Z9aUts",
  "liquidityVaultAuthorityBump": 254,
  "liquidityVaultBump": 255,
  "mint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
  "mintDecimals": 6,
  "oracleKey": "6HAuqASbHEh4w4REJEUUUCginTLfj1kwCh215ZLtMkrT",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "3128494376",
      "maxOutflow": "80258976191",
      "prevWindowOutflow": "-1075794642",
      "windowDuration": 86400,
      "windowStart": 1790110394,
    },
    "hourly": {
      "curWindowOutflow": "20000002",
      "maxOutflow": "53505984127",
      "prevWindowOutflow": "0",
      "windowDuration": 3600,
      "windowStart": 1790193812,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": undefined,
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "71636611002",
  "totalLiabilityShares": "0",
}
`;

exports[`bank DTO > decodes the 'sol' bank into the API DTO 1`] = `
{
  "address": "CCKtUs6Cgwo4aaQUmBPmyoApH2gUDErxNZCAntD6LYGh",
  "assetShareValue": "1.0980350728196839327",
  "borrowingPositionCount": "-934",
  "collectedGroupFeesOutstanding": "3581230101.5960602476",
  "collectedInsuranceFeesOutstanding": "30432.146154378081793",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 1,
    "assetWeightInit": "0.80000001192092895508",
    "assetWeightMaint": "0.89999997615814208984",
    "borrowLimit": "500000000000000",
    "configFlags": 1,
    "depositLimit": "2000000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 85899346,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 21474836,
          "util": 3865470566,
        },
        {
          "rate": 30064771,
          "util": 4209067949,
        },
        {
          "rate": 42949673,
          "util": 4252017622,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0.000099999999999766941983",
      "protocolIrFee": "0",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.1400000000000005684",
    "liabilityWeightMaint": "1.1000000000000014211",
    "operationalState": "Operational",
    "oracleKeys": [
      "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 70,
    "oracleMaxConfidence": 0,
    "oracleSetup": "PythPushOracle",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "227400000",
  },
  "driftIntegrationAccounts": undefined,
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [
      {
        "assetWeightInit": "0.94999999999999928946",
        "assetWeightMaint": "0.98999999999999843681",
        "collateralBankEmodeTag": 501,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.89999999999999857891",
        "assetWeightMaint": "0.94999999999999928946",
        "collateralBankEmodeTag": 502,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.85000000000000142109",
        "assetWeightMaint": "0.9200000000000017053",
        "collateralBankEmodeTag": 619,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "1.0459999999999993747",
        "assetWeightMaint": "1.05099999999999838",
        "collateralBankEmodeTag": 1571,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.99200000000000088107",
        "assetWeightMaint": "0.99899999999999877787",
        "collateralBankEmodeTag": 1572,
        "flags": [
          1,
        ],
      },
      {
        "assetWeightInit": "0.85000000000000142109",
        "assetWeightMaint": "0.94999999999999928946",
        "collateralBankEmodeTag": 15787,
        "flags": [
          1,
        ],
      },
    ],
    "emodeTag": 501,
    "flags": [
      1,
    ],
    "timestamp": 1784821730,
  },
  "feeVault": "DBxZtSJ4vvswbmzUUg6wvpNKBHxuW9rAHUTv9tfybBKd",
  "feeVaultAuthorityBump": 254,
  "feeVaultBump": 254,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "82vqGDP4yLGZgeZXjTvPcx7NVuUhzxxxcQzTwoy3vK3o",
  "insuranceVaultAuthorityBump": 253,
  "insuranceVaultBump": 253,
  "jupLendIntegrationAccounts": undefined,
  "kaminoIntegrationAccounts": undefined,
  "lastUpdate": 1790254442,
  "lendingPositionCount": "-6551",
  "liabilityShareValue": "1.2261430543669327164",
  "liquidityVault": "2eicbpitfJXDwqCuFAmPgDP7t2oUotnAzbGzRKLMgSLe",
  "liquidityVaultAuthorityBump": 255,
  "liquidityVaultBump": 255,
  "mint": "So11111111111111111111111111111111111111112",
  "mintDecimals": 9,
  "oracleKey": "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "-11207623783",
      "maxOutflow": "58628723556651",
      "prevWindowOutflow": "2129819727938",
      "windowDuration": 86400,
      "windowStart": 1790245511,
    },
    "hourly": {
      "curWindowOutflow": "-8690859864",
      "maxOutflow": "39085815704434",
      "prevWindowOutflow": "-2536203919",
      "windowDuration": 3600,
      "windowStart": 1790251676,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": undefined,
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "83312786684226.739277",
  "totalLiabilityShares": "72827515718968.391552",
}
`;

exports[`bank DTO > decodes the 'staked' bank into the API DTO 1`] = `
{
  "address": "3VCkXWAmE5DSwYRpqGFnkUz7vvD2RKbhFvrhzLuE8msu",
  "assetShareValue": "1",
  "borrowingPositionCount": "0",
  "collectedGroupFeesOutstanding": "0",
  "collectedInsuranceFeesOutstanding": "0",
  "collectedProgramFeesOutstanding": "0",
  "config": {
    "assetTag": 2,
    "assetWeightInit": "0.89999999999999857891",
    "assetWeightMaint": "0.94999999999999928946",
    "borrowLimit": "0",
    "configFlags": 1,
    "depositLimit": "2500000000000000",
    "fixedPrice": "0",
    "interestRateConfig": {
      "curveType": 1,
      "hundredUtilRate": 1288490188,
      "insuranceFeeFixedApr": "0",
      "insuranceIrFee": "0.10000000000000142109",
      "placeholder0": "0",
      "placeholder1": "0",
      "placeholder2": "0",
      "points": [
        {
          "rate": 171798691,
          "util": 1717986917,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
        {
          "rate": 0,
          "util": 0,
        },
      ],
      "protocolFixedFeeApr": "0.010000000000001563194",
      "protocolIrFee": "0",
      "protocolOriginationFee": "0",
      "zeroUtilRate": 0,
    },
    "liabilityWeightInit": "1.5",
    "liabilityWeightMaint": "1.25",
    "operationalState": "Operational",
    "oracleKeys": [
      "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
      "BNisp3omkr6Rg5nHESWafjUbeCpGPy6MYq1iRJRgSAsh",
      "DsWBAjaADG52DS2Fi6vzoyNAGzbqNA9rNK53xqAHMjqT",
      "CnSe1WoQhjn6iE21W99iE93YFqdh4V5Vf97yxjPYqN7Z",
      "11111111111111111111111111111111",
    ],
    "oracleMaxAge": 120,
    "oracleMaxConfidence": 0,
    "oracleSetup": "StakedWithPythPush",
    "riskTier": "Collateral",
    "scopeEntryIndex": 0,
    "totalAssetValueInitLimit": "2500000000",
  },
  "driftIntegrationAccounts": undefined,
  "emissionsActiveBorrowing": false,
  "emissionsActiveLending": false,
  "emissionsMint": "11111111111111111111111111111111",
  "emissionsRate": 0,
  "emissionsRemaining": "0",
  "emode": {
    "emodeEntries": [],
    "emodeTag": 0,
    "flags": [],
    "timestamp": 0,
  },
  "feeVault": "BY91AvJfgsNRMhD6SwLFacBNycrEdxciRi7XWpTgxz8y",
  "feeVaultAuthorityBump": 254,
  "feeVaultBump": 252,
  "feesDestinationAccount": "11111111111111111111111111111111",
  "group": "4qp6Fx6tnZkY5Wropq9wUYgtFxXKwE6viZxFHg3rdAG8",
  "insuranceVault": "7U7opGWuwcZKWsZeVxbArgMvT7WLUawB5Q4HN4gw6UfX",
  "insuranceVaultAuthorityBump": 253,
  "insuranceVaultBump": 253,
  "jupLendIntegrationAccounts": undefined,
  "kaminoIntegrationAccounts": undefined,
  "lastUpdate": 1790168264,
  "lendingPositionCount": "1",
  "liabilityShareValue": "1",
  "liquidityVault": "EfL6qsvqvkpjvDc5d7VxEhLoUkAmUgKVfh6Q7S8nvKmi",
  "liquidityVaultAuthorityBump": 254,
  "liquidityVaultBump": 255,
  "mint": "BNisp3omkr6Rg5nHESWafjUbeCpGPy6MYq1iRJRgSAsh",
  "mintDecimals": 9,
  "oracleKey": "7AviUf9nL62mcxNbQGKm4nKDQnPjswo6c5MX4D57HmyE",
  "rateLimiter": {
    "daily": {
      "curWindowOutflow": "-3694169839887",
      "maxOutflow": "1022378922821",
      "prevWindowOutflow": "-3503862595970",
      "windowDuration": 86400,
      "windowStart": 1790115658,
    },
    "hourly": {
      "curWindowOutflow": "-3694169839887",
      "maxOutflow": "511189461410",
      "prevWindowOutflow": "0",
      "windowDuration": 3600,
      "windowStart": 1790168264,
    },
  },
  "solendIntegrationAccounts": undefined,
  "stakedIntegrationAccounts": {
    "validatorVoteAccount": "abc1zP7ihWsgQW8z5YmfQNqMckJE5Dfx8fwUNMNVNkY",
  },
  "stakedOracleDisabled": false,
  "stakedOracleUsesOnramp": false,
  "tokenSymbol": undefined,
  "totalAssetShares": "24388931397217",
  "totalLiabilityShares": "0",
}
`;
